# toxicity-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/commit/: SKILL.md
notebooks/: 01_toldbr_eda.ipynb  02_features_validation.ipynb  03_estimators.ipynb  04_monte_carlo.ipynb
paper/: README.md  main.tex  references.bib
paper/sections/: 01-introduction.tex  02-theoretical-framework.tex  03-related-work.tex  04-methodology.tex  05-results.tex  06-conclusion.tex
src/toxicity_analysis/: constants.py  estimators.py  features.py  sampling.py
tests/: test_data.py  test_estimators.py  test_features.py  test_sampling.py
